--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "n-clean dist/* && mkdir dist/js",
     "prebuild": "npm run clean -s",
     "build": "npm run build:assets && npm run build:scripts -s && npm run build:styles -s && npm run build:html -s",
-    "build:assets": "n-copy --source src --destination dist \"css/**/*\" \"img/**/*\" \"data/**/*\" \"views/**/*\"",
+    "build:assets": "n-copy --source src --destination dist \"css/**/*\" \"img/**/*\" \"data/**/*\" \"mp3/**/*\" \"views/**/*\"",
     "build:scripts": "./node_modules/.bin/jspm bundle-sfx ./src/js/app ./dist/js/app.min.js --minify",
     "build:styles": "postcss --use autoprefixer src/css/main.css | cssmin > dist/css/main.css",
     "build:html": "./node_modules/.bin/html-dist src/index.html --remove-all --minify --insert js/app.min.js -o dist/index.html",
