--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "n-clean dist/* && mkdir dist/js",
     "prebuild": "npm run clean -s",
     "build": "npm run build:assets && npm run build:scripts -s && npm run build:styles -s && npm run build:html -s",
-    "build:assets": "n-copy --source src --destination dist \"css/**/*\" \"img/**/*\" \"data/**/*\" \"mp3/**/*\" \"views/**/*\"",
+    "build:assets": "n-copy --source src --destination dist \"css/**/*\" \"img/**/*\" \"data/*\" \"views/**/*\"",
     "build:scripts": "./node_modules/.bin/jspm bundle-sfx ./src/js/app ./dist/js/app.min.js --minify",
     "build:styles": "postcss --use autoprefixer src/css/main.css | cssmin > dist/css/main.css",
     "build:html": "./node_modules/.bin/html-dist src/index.html --remove-all --minify --insert js/app.min.js -o dist/index.html",
@@ -17,6 +17,7 @@
     "serve": "npm run serve:src",
     "serve:src": "http-server -p 9090 ./src",
     "serve:dist": "http-server -p 8080 ./dist",
+    "deploy": "npm run deploy:prod",
     "deploy:prod": "firebase deploy",
     "deploy:dev": "firebase deploy -f afxvis-dev"
   },
