--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "n-clean dist/* && mkdir dist/js",
     "prebuild": "npm run clean -s",
     "build": "npm run build:assets && npm run build:scripts -s && npm run build:styles -s && npm run build:html -s",
-    "build:assets": "n-copy --source src --destination dist \"css/**/*\" \"img/**/*\" \"data/*\" \"views/**/*\"",
+    "build:assets": "n-copy --source src --destination dist 'favicon.ico' 'css/**/*' 'img/**/*' 'data/*' 'views/**/*'",
     "build:scripts": "./node_modules/.bin/jspm bundle-sfx ./src/js/app ./dist/js/app.min.js --minify",
     "build:styles": "postcss --use autoprefixer src/css/main.css | cssmin > dist/css/main.css",
     "build:html": "./node_modules/.bin/html-dist src/index.html --remove-all --minify --insert js/app.min.js -o dist/index.html",
@@ -19,8 +19,8 @@
     "serve:dist": "http-server -p 8080 ./dist",
     "git:branch": "git subtree split --prefix dist -b gh-pages",
     "git:push": "git push -f origin gh-pages:gh-pages",
-    "git: cleanup": "git branch -D gh-pages",
-    "deploy": "npm run build && npm run git:branch && npm run git:push && npm run git:cleanup"
+    "git:cleanup": "git branch -D gh-pages",
+    "deploy": "npm run git:branch && npm run git:push && npm run git:cleanup"
   },
   "repository": {
     "type": "git",
