--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "clean": "n-clean dist/* && mkdir dist/js",
     "prebuild": "npm run clean -s",
-    "build": "npm run build:assets && npm run build:scripts -s && npm run build:styles -s && npm run build:html -s",
-    "build:assets": "n-copy --source src --destination dist 'favicon.ico' 'css/**/*' 'img/**/*' 'data/*' 'views/**/*'",
+    "build": "npm run build:assets && npm run build:extras && npm run build:scripts -s && npm run build:styles -s && npm run build:html -s",
+    "build:assets": "n-copy --source src --destination dist 'css/**/*' 'img/**/*' 'data/*' 'views/**/*'",
+    "build:extras": "n-copy --source src --destination dist 'favicon.ico' 'CNAME'",
     "build:scripts": "./node_modules/.bin/jspm bundle-sfx ./src/js/app ./dist/js/app.min.js --minify",
     "build:styles": "postcss --use autoprefixer src/css/main.css | cssmin > dist/css/main.css",
     "build:html": "./node_modules/.bin/html-dist src/index.html --remove-all --minify --insert js/app.min.js -o dist/index.html",
